Make Pandas exercises consistent in the normal notebook and solutions notebook

--- a/01b_Intro_to_pandas_with_solutions.ipynb
+++ b/01b_Intro_to_pandas_with_solutions.ipynb
@@ -75,27 +75,10 @@
     "# URL for data\n",
     "pokedex_url = 'https://raw.githubusercontent.com/bwsi-hadr/01-Intro-to-python/master/pokedex.csv?token=AK6STNOT3VACKCD37B6THDK5DYG4M' \n",
     "# instead of a url, you could instead put a path to a csv file on the local system where python is running. However, since colab is on the cloud, it's easier to use a url\n",
-    "pokedex_df = pd.read_csv('pokedex.csv', index_col='Index') # create a dataframe from a csv, set the column titled \"Index\" as the row labels\n",
+    "pokedex_df = pd.read_csv(pokedex_url, index_col='Index') # create a dataframe from a csv, set the column titled \"Index\" as the row labels\n",
     "\n",
     "pokedex_df = pokedex_df.fillna('') #fill in the NaN values with empty string \n",
     "pokedex_df # prints out the dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
-    "colab_type": "code",
-    "id": "YqKh4sfRyRSb",
-    "outputId": "cd5f57a0-7b9b-48cd-b97a-2ea4ee2bde80"
-   },
-   "outputs": [],
-   "source": [
-    "ls"
    ]
   },
   {
@@ -318,39 +301,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "q8lDRjyO2DnH"
-   },
-   "outputs": [],
-   "source": [
-    "new_pokemon = pd.DataFrame([{'Pokemon':'Grookey', 'Type I':'Grass', 'Color':'Green'},\n",
-    "                            {'Pokemon':'Scorbunny', 'Type I':'Fire', 'Color':'Red'},\n",
-    "                            {'Pokemon':'Sobble', 'Type I':'Water', 'Color':'Blue'}], \n",
-    "                           index=[803.0, 804.0, 805.0]) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 344
-    },
-    "colab_type": "code",
-    "id": "hC34eyqYiWU8",
-    "outputId": "1d3c8aa7-0eae-4c59-ffd3-de77aaca972e"
-   },
-   "outputs": [],
-   "source": [
-    "pokedex_df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 558
@@ -367,7 +317,7 @@
     "                            {'Pokemon':'Sobble', 'Type I':'Water', 'Color':'Blue'}], \n",
     "                           index=[803.0, 804.0, 805.0]) # create a dataframe with new entries using a list of dictionaries\n",
     "pokedex_df = pokedex_df.append(new_pokemon, sort=False) # the sort=False keyword prevents the columns from being reordered alphabetically\n",
-    "pokedex_df.loc[:,'HP':'Color'] = pokedex_df.loc[:,'HP':'Color'].fillna('') # some cleanup operations, replace NaN with emptry strings, and drop duplicate rows\n",
+    "pokedex_df = pokedex_df.fillna('').drop_duplicates() # some cleanup operations, replace NaN with emptry strings, and drop duplicate rows\n",
     "pokedex_df.tail()"
    ]
   },
@@ -632,8 +582,8 @@
    "outputs": [],
    "source": [
     "# you can use the backslash operator \\ to continue code on the next line\n",
-    "query = (((pokedex_df['Type I']=='Flying') & (pokedex_df['Type II']=='Dragon'))\n",
-    "        | ((pokedex_df['Type I']=='Dragon') & (pokedex_df['Type II']=='Flying'))) \n",
+    "query = ((pokedex_df['Type I']=='Flying') & (pokedex_df['Type II']=='Dragon'))\\\n",
+    "        | ((pokedex_df['Type I']=='Dragon') & (pokedex_df['Type II']=='Flying'))\n",
     "pokedex_df.loc[query]"
    ]
   },
@@ -707,7 +657,7 @@
    },
    "outputs": [],
    "source": [
-    "pokedex_df.sort_values('Pokemon') # Sort by name descending"
+    "pokedex_df.sort_values('Pokemon', ascending=False) # Sort by name descending"
    ]
   },
   {
@@ -782,19 +732,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "qzodnrWk7unF"
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 34
@@ -822,7 +759,7 @@
    },
    "outputs": [],
    "source": [
-    "np.max(pokedex_df.loc[:,'HP':'Total'].astype(float), axis=0) # take natural log of all stats\n",
+    "np.log(pokedex_df.loc[:,'HP':'Total'].astype(float), axis=0) # take natural log of all stats\n",
     "# again, these functions operate on each element independently, and return a dataframe with the same index and size of input"
    ]
   },
@@ -853,7 +790,7 @@
    },
    "outputs": [],
    "source": [
-    "pokedex_df.loc[1:200,'Atk':'Speed'].apply(np.mean) # applies the function np.mean() to each column"
+    "pokedex_df.loc[:,'Atk':'Speed'].apply(np.mean) # applies the function np.mean() to each column"
    ]
   },
   {
@@ -970,20 +907,6 @@
     "square_it = lambda x: x**2 # recall that ** is exponentiation in python, this function returns the square of the input\n",
     "for num in range(10):\n",
     "  print(square_it(num))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "8wRxX9fQ-7o_"
-   },
-   "outputs": [],
-   "source": [
-    "def square_it(x):\n",
-    "  return x**2"
    ]
   },
   {
@@ -1808,13 +1731,6 @@
     "                       aggfunc=lambda x:\", \".join(x)).fillna('') # the lambda function here just joins a list of strings using a comma\n",
     "                      # we also fill nan values with empty string for aesthetics"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
