--- a/01b_Intro_to_pandas_with_solutions.ipynb
+++ b/01b_Intro_to_pandas_with_solutions.ipynb
@@ -1342,6 +1342,8 @@
     "### Exercises\n",
     "Compute the total population of the entire united states, as well as its population density for each year.\n",
     "\n",
+    "Sort the states by population density.\n",
+    "\n",
     "What year saw the biggest change in population for the US as a whole?\n",
     "\n",
     "Which states had the biggest percentage change in population in that year?"
