Add more exercises to the intro to numpy

--- a/01a_Intro_to_python.ipynb
+++ b/01a_Intro_to_python.ipynb
@@ -425,6 +425,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now try to print a list of the first few even cubes using list comprehension. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "coaXDh3Q3Oo4"
@@ -742,6 +756,15 @@
    "outputs": [],
    "source": [
     "pokemon_types = {'bulbasaur':'grass', 'charmander':'fire', 'squirtle':'water'}\n",
+    "pokemon_types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(pokemon_types['bulbasaur'])"
    ]
   },
@@ -774,7 +797,7 @@
    "source": [
     "pokemon_types['bulbasaur'] = 'grass/poison' #bulbasaur is actually dual typed, so we'll change its entry\n",
     "pokemon_types['ivysaur'] = 'grass/poison' #let's add an evolution\n",
-    "print(pokemon_types)"
+    "pokemon_types"
    ]
   },
   {
@@ -1153,7 +1176,7 @@
    "source": [
     "print('x1 is', x1)\n",
     "print('first entry is', x1[0]) # first entry of the array\n",
-    "print('second and third entries are', x1[1,2])\n",
+    "print('second and third entries are', x1[[1,2]])\n",
     "print('first three entries are', x1[:3]) # slice the array\n",
     "print('a second set of colons in the slice allow you to set the interval:', x1[::2]) # every other element of x1\n",
     "print('you can reverse the order using a negative interval:', x1[3::-1]) # count backwards from entry at index 3 to the beginning"
