--- a/01a_Intro_to_python.ipynb
+++ b/01a_Intro_to_python.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -91,7 +91,15 @@
     "id": "1HBI-270uEKo",
     "outputId": "a5965918-1d30-427f-daf3-781faff0b010"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Help on built-in function print in module builtins:\n\nprint(...)\n    print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n    \n    Prints the values to a stream, or to sys.stdout by default.\n    Optional keyword arguments:\n    file:  a file-like object (stream); defaults to the current sys.stdout.\n    sep:   string inserted between values, default a space.\n    end:   string appended after the last value, default a newline.\n    flush: whether to forcibly flush the stream.\n\n"
+     ]
+    }
+   ],
    "source": [
     "help(print)"
    ]
@@ -109,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -119,7 +127,15 @@
     "id": "PZgpEmkSvkWT",
     "outputId": "a4f8027b-9cac-4fb0-d5db-2b93c3ede118"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[0. 0. 0.]\n [0. 0. 0.]\n [0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "array_of_zeros = np.zeros([3,3]) # this creates a 3x3 array full of zeros\n",
     "print(array_of_zeros) # the print() function displays the value of the variable on screen"
@@ -151,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -161,7 +177,15 @@
     "id": "MKvAT1qCCaUR",
     "outputId": "e039b861-2125-4b50-f18e-7c764b8ec9fa"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "idx is equal to 0\nidx is equal to 1\nidx is equal to 2\nidx is equal to 3\nidx is equal to 4\nidx is equal to 5\n"
+     ]
+    }
+   ],
    "source": [
     "idx_list = [0,1,2,3,4,5]\n",
     "for idx in idx_list: # loop over idx_list, set idx equal to each element sequentially\n",
@@ -186,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -196,7 +220,15 @@
     "id": "JL8HijzxPWeN",
     "outputId": "3388905a-273b-4f96-9e6d-5437482f8a98"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "idx is equal to 0\nidx is equal to 1\nidx is equal to 2\nidx is equal to 3\nidx is equal to 4\nidx is equal to 5\n"
+     ]
+    }
+   ],
    "source": [
     "for idx in range(0,6): #equivalent to the above\n",
     "  print('idx is equal to {}'.format(idx)) # print the current value of idx"
@@ -204,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -214,7 +246,15 @@
     "id": "qwbL0GxA2NnZ",
     "outputId": "aa073c7d-c9a6-4eb2-b137-0d16789950c2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "idx is currently 0\nidx is currently 1\nidx is currently 2\nidx is currently 3\nidx is currently 4\nidx is currently 5\n"
+     ]
+    }
+   ],
    "source": [
     "for idx in range(6): # if you only give one argument, it automatically starts from 0\n",
     "  print('idx is currently {}'.format(idx)) # print the current value of idx"
@@ -233,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -243,7 +283,15 @@
     "id": "AErHQm2wfUJ-",
     "outputId": "a31bbbac-407f-45c4-b2a9-db255ac658b5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "idx=1 is less than 2\nidx=2 is equal to 2\nidx=3, which is greater than 2\nidx=4, which is greater than 2\nidx=5, which is greater than 2\n"
+     ]
+    }
+   ],
    "source": [
     "for idx in range(1,6):\n",
     "  if idx > 2 : # only execute the following indented block of code if idx is greater than 2\n",
@@ -267,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -277,7 +325,15 @@
     "id": "SOFosKF49UzB",
     "outputId": "94cbab61-4a04-43e0-871a-61ecaf70162f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\nFalse\nTrue\n"
+     ]
+    }
+   ],
    "source": [
     "x = 5\n",
     "y = 10\n",
@@ -302,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -312,7 +368,18 @@
     "id": "4RXzlU3v2ouq",
     "outputId": "51c83373-978b-44e8-933a-1ed44c829b30"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
    "source": [
     "list(range(6))"
    ]
@@ -334,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -344,7 +411,15 @@
     "id": "HyBFG1T16UX8",
     "outputId": "cb1e41df-f86c-4bba-ab2b-8f15bc221a88"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "list_of_numbers = [x for x in range(6)]\n",
     "print(list_of_numbers)"
@@ -365,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -375,7 +450,15 @@
     "id": "08Z_-RIm7X10",
     "outputId": "e7fe7125-d4d0-4852-e815-2332471bd839"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
    "source": [
     "list_of_first_five_squares = [x**2 for x in range(6)] # the double star ** expression denotes exponentiation\n",
     "# hence, the above gives the first 5 square numbers, including zero\n",
@@ -397,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -407,7 +490,15 @@
     "id": "uRQy9G6j8KIk",
     "outputId": "513e8b0a-edaa-4954-8d27-ed87855b8c83"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 9, 25, 49, 81]\n"
+     ]
+    }
+   ],
    "source": [
     "list_of_first_few_odd_squares = [x**2 for x in range(10) if np.mod(x,2) == 1] \n",
     "print(list_of_first_few_odd_squares)"
@@ -440,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -449,17 +540,21 @@
    "outputs": [],
    "source": [
     "def is_prime(number):\n",
-    "  sqrt_num = int(np.sqrt(number)) # we only need to check integer factors up to the square root of the number, rounded down (int() always rounds down)\n",
-    "  for potential_factor in range(2,sqrt_num+1): #range(a,b) iterates from the value a to b-1\n",
-    "    if np.mod(number, potential_factor) == 0: #np.mod() is the modulo (aka remainder) function; thus, if the remainder is zero, then it divides evenly\n",
-    "      return False # if it divides evenly, then it's not prime, then we can return and end the function\n",
-    "  return True #if we get through all of the potential factors and haven't found a factor, then it's prime\n",
+    "  if type(number) is int:\n",
+    "    if number < 2: # all negative numbers, 0, and 1 are not prime\n",
+    "          return False \n",
+    "    sqrt_num = int(np.sqrt(number)) # we only need to check integer factors up to the square root of the number, rounded down (int() always rounds down)\n",
+    "    for potential_factor in range(2,sqrt_num+1): #range(a,b) iterates from the value a to b-1\n",
+    "      if np.mod(number, potential_factor) == 0: #np.mod() is the modulo (aka remainder) function; thus, if the remainder is zero, then it divides evenly\n",
+    "        return False # if it divides evenly, then it's not prime, then we can return and end the function\n",
+    "    return True #if we get through all of the potential factors and haven't found a factor, then it's prime\n",
+    "  return False\n",
     "  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -469,9 +564,20 @@
     "id": "j1lbrTdR5Igp",
     "outputId": "1d805f46-7b2f-4326-ca90-6360767c65fa"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
    "source": [
-    "is_prime(101.0)"
+    "is_prime(3)"
    ]
   },
   {
@@ -1703,7 +1809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
